fixed styling and menu alignment

--- a/code/wp-content/themes/twentytwelve/style.css
+++ b/code/wp-content/themes/twentytwelve/style.css
@@ -56,7 +56,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
+	font-size: 105%;
 	vertical-align: baseline;
 }
 body {
@@ -171,6 +171,7 @@ img {
 .wrapper:after,
 .format-status .entry-header:before,
 .format-status .entry-header:after {
+	clear: both;
 	display: table;
 	content: "";
 }
@@ -489,7 +490,7 @@ body {
 	color: #444;
 }
 body.custom-font-enabled {
-	font-family: "Open Sans", Helvetica, Arial, sans-serif;
+	font-family: 'Source Sans Pro', "Open Sans", Helvetica, Arial, sans-serif;
 }
 a {
 	outline: none;
@@ -1634,7 +1635,7 @@ img#wpstats {
 	.main-navigation .current-menu-ancestor > a,
 	.main-navigation .current-page-item > a,
 	.main-navigation .current-page-ancestor > a {
-		color: #636363;
+		color: #041F6A;
 		font-weight: bold;
 	}
 	
@@ -1665,7 +1666,7 @@ img#wpstats {
 	.sub-navigation .current-menu-ancestor > a,
 	.sub-navigation .current_page_item > a,
 	.sub-navigation .current_page_ancestor > a {
-		color: #636363;
+		color: #041F6A;
 		font-weight: bold;
 	}
 	
@@ -1898,9 +1899,8 @@ img#wpstats {
 
 #menu-home-page-left {
 	float: left;
-	text-align: right;
-	width: auto;
-	padding-right: 40px;
+	text-align: left;
+	width: 320px;
 }
 
 #menu-home-page-left li {
@@ -1910,8 +1910,7 @@ img#wpstats {
 
 #menu-home-page-right {
 	float: right;
-	width: auto;
-	padding-left: 40px;
+	width: 320px;
 }
 
 #menu-home-page-right li {
@@ -1919,13 +1918,56 @@ img#wpstats {
 	position: relative;
 }
 
+@media (max-width: 920px){
+
+	#menu-home-page-left {
+		margin-top: 45px;
+		width: 50%;
+		text-align:right;
+	}
+	#menu-home-page-right{
+		margin-top: 45px;
+		width: 50%;
+		text-align:left;
+	}
+}
+
+@media (max-width: 700px){
+
+	#menu-home-page-left {
+		margin-top: 45px;
+		width: 100%;
+		text-align:center;
+	}
+	#menu-home-page-left li{
+		margin: 0px 15px -15px 15px;
+	}
+
+	#menu-home-page-right{
+		margin-top: 0px;
+		width: 100%;
+		text-align:center;
+	}
+	#menu-home-page-right li{
+		margin: 0px 15px;
+	}
+
+}
+#site-navigation {
+	position: relative;
+}
+
 #site-title {
+	position: absolute;
 	font-family: 'Playfair Display SC', serif;
 	font-size: 25pt;
 	text-transform: uppercase;
+	width: 100%;
+	text-align: center;
 }
 
 #site-title a {
 	text-decoration: none;
+	font-weight: bold;
 }
 
